<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="chorus_title_layout_channel_name_hint">Channel ID: &#160;&#160;</string>

    <string name="chorus_bottom_bar_item_text_help">Help</string>
    <string name="chorus_bottom_bar_item_text_in_ear">In-Ear</string>
    <string name="chorus_bottom_bar_item_text_camera">Camera</string>
    <string name="chorus_bottom_bar_item_text_mic">Mic</string>
    <string name="chorus_bottom_bar_item_text_chat">Chat</string>

    <string name="course_ware_title_lyrics">Music</string>
    <string name="course_ware_title_file">CourseWare</string>
    <string name="course_ware_title_music_name_hint">Music: &#160;&#160;</string>
    <string name="course_ware_music_effect">Effect</string>
    <string name="course_ware_music_console">Console</string>
    <string name="course_ware_music_switch">Switch</string>

    <string name="lrc_label">no lyric</string>
    <string name="no_music">No Music Choosed</string>

    <string name="broadcaster_item_user_offline">Offline</string>
    <string name="broadcaster_item_empty">Empty</string>
    <string name="seat_op_dialog_camera">Camera</string>
    <string name="seat_op_dialog_mic">Mic</string>
    <string name="seat_op_dialog_title_format">Device of %s</string>
</resources>