<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chorus_bottom_action_bar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:background="@drawable/chorus_bottom_bar_bg">
    <RelativeLayout
        android:id="@+id/chorus_bottom_bar_item_help"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chorus_bottom_bar_item_icon_help"
                android:layout_width="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_height="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_help"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/chorus_bottom_bar_item_icon_help"
                android:layout_marginTop="@dimen/chorus_bottom_bar_item_text_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_10"
                android:text="@string/chorus_bottom_bar_item_text_help"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/chorus_bottom_bar_item_in_ear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chorus_bottom_bar_item_icon_in_ear"
                android:layout_width="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_height="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/chorus_bottom_bar_icon_in_ear"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/chorus_bottom_bar_item_icon_in_ear"
                android:layout_marginTop="@dimen/chorus_bottom_bar_item_text_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_10"
                android:text="@string/chorus_bottom_bar_item_text_in_ear"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/chorus_bottom_bar_item_camera"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chorus_bottom_bar_item_icon_camera"
                android:layout_width="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_height="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/chorus_bottom_bar_icon_camera"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/chorus_bottom_bar_item_icon_camera"
                android:layout_marginTop="@dimen/chorus_bottom_bar_item_text_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_10"
                android:text="@string/chorus_bottom_bar_item_text_camera"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/chorus_bottom_bar_item_mic"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chorus_bottom_bar_item_icon_mic"
                android:layout_width="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_height="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/chorus_bottom_bar_icon_mic"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/chorus_bottom_bar_item_icon_mic"
                android:layout_marginTop="@dimen/chorus_bottom_bar_item_text_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_10"
                android:text="@string/chorus_bottom_bar_item_text_mic"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/chorus_bottom_bar_item_sound_chat"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/chorus_bottom_bar_item_icon_effect"
                android:layout_width="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_height="@dimen/chorus_bottom_bar_item_icon_size"
                android:layout_centerHorizontal="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_chat"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/chorus_bottom_bar_item_icon_effect"
                android:layout_marginTop="@dimen/chorus_bottom_bar_item_text_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_10"
                android:text="@string/chorus_bottom_bar_item_text_chat"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>